# mwe-wasm-app

./: .gitignore  CMakeLists.txt  README.md  index.html
js/: libBackend.js  libBackend.wasm  libBackend.wast  ui.js
